feat(api): add new API /dataset/{datasetID} and its implementation, unit tests, and checks in the integration tests
